--- a/faq.css
+++ b/faq.css
@@ -25,6 +25,7 @@
 }
 #expand{
     display: block;
+    margin-top: 30px;
 }
 #expand>button{
     margin-left: 850px;
@@ -38,6 +39,7 @@
 #expand h2{
     font-family: sans-serif;
     color: rgb(65, 62, 62);
+    margin-top: 10px;
 }
   
 .content {
@@ -52,13 +54,13 @@
     font-size: 15px;
     padding: 5px 10px 10px 50px;
     display: block;
-    width:100%;
+    width:90%;
     cursor: pointer;
   }
 .question p{   
     background: #eeecec;
     font-size: 15px;
-    width:100%;
+    width:90%;
     font-weight: bold;
     margin-left: -30px;
     color: rgb(48, 47, 47);
@@ -67,7 +69,7 @@
 .answers {
     padding: 0px 15px;
     margin: 5px 0;
-    width:100%!important;
+    width:92%!important;
     height: 0;
     overflow: hidden;
     z-index: -1;
