--- a/Navbar.css
+++ b/Navbar.css
@@ -6,7 +6,7 @@
   width: 100%;
   border-bottom: 1px solid rgb(195, 195, 212);
   background-color: white;
-  position: fixed;
+  position: sticky;
   top: 0px;
   align-items: center;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -80,7 +80,7 @@
   width: 24px;
 }
 
-a {
+ a {
   text-decoration: none;
  
   color: black;
@@ -121,4 +121,77 @@ a {
 
     #right_box_nav{gap: 10px;
     }
+}
+
+
+
+/* modal */
+
+.container {
+  position: relative;
+  margin-top: 500px;
+  border: 0px solid red;
+  width: 40%;
+  margin: 20% auto;
+}
+.modal {
+
+  padding: 2% 7%;
+  margin: 1%;
+  border-radius: 10px;
+  font-size: larger;
+  font-weight: bolder;
+  cursor: pointer;
+
+  border: none;
+}
+.main {
+
+  margin-right: 22%;
+  border-radius: 20px;
+  padding: 4%;
+  top: 10px;
+  right: 0;
+  opacity: 0;
+  position: fixed;
+  content: attr(title);
+  width: 30%;
+
+  border: 1px solid gray;
+  background-color: azure;
+  z-index: 1;
+  transition: opacity 0.3s ease;
+  /* display: none; */
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.main.show {
+  opacity: 1;
+}
+
+.green {
+  cursor: pointer;
+
+  padding: 2% 6%;
+  border: none;
+
+  margin: 0% 25%;
+}
+.red {
+  cursor: pointer;
+  background-color: red;
+  padding: 2% 6%;
+  border: none;
+  color: whitesmoke;
+}
+.del {
+  width: 25px;
+  position: absolute;
+  top: 10px;
+  left: 90%;
+  cursor: pointer;
+}
+.del:hover {
+  color: red;
+  filter: invert();
 }
